added hero banner and removed/added some dependencies

--- a/MyPropCo/src/App.css
+++ b/MyPropCo/src/App.css
@@ -1,3 +1,7 @@
+html {
+    margin: 0px -8px !important;
+}
+
 .nav__toolbar {
     display: flex;
 }
@@ -5,4 +9,19 @@
 .nav__image {
     margin-right: auto;
     max-width: 10rem;
+}
+
+.hero__image_max {
+    margin-top: 48px;
+    width: 100%;
+    max-height: 1018px;
+}
+
+.hero__image_min {
+    width: 100%;
+    min-height: 610px;
+}
+
+.css-1ps6pg7-MuiPaper-root {
+    box-shadow: none !important;
 }
