--- a/MyPropCo/src/App.css
+++ b/MyPropCo/src/App.css
@@ -196,27 +196,54 @@ html {
     font-size: 75px !important;
 }
 
+/* Flip Animation for contact ads *requires you to click on the component*/
 .content__wrapper {
     display: flex;
     justify-content: center;
     margin-top: 100px;
-}
-
-.content__image {
-    width: 350px;
-    height: 320px;
-}
-
-.content__info {
-    padding: 35px;
+    margin-bottom: 100px;
+    height: 570px;
 }
 
 .content__container {
     width: 288px;
+    height: 320px;
     margin: 15px;
-    border: lightgray solid 1px;
+
+    perspective: 1000px;
+    position: relative;
 }
 
-/* .content__container :hover {
+.content__card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+}
+
+.content__container.flipped .content__card {
     transform: rotateY(180deg);
-} */
+}
+
+.content__side {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.content__side--back {
+    transform: rotateY(180deg);
+}
+
+.content__image {
+    width: 100%;
+    height: 100%;
+}
+
+.content__info {
+    border: lightgray solid 1px;
+    padding: 35px;
+    height: 163px;
+}
