--- a/MyPropCo/src/App.css
+++ b/MyPropCo/src/App.css
@@ -1,9 +1,39 @@
-html {
+.container {
+    max-width: 100% !important;
+}
+
+.navbar-spacing {
+    justify-content:
+        flex-end;
+
+}
+
+.navbar-background {
+    background-color: #19263A !important;
+}
+
+.navbar-link-container a {
+    color: white !important;
+    font-family: "Open Sans";
+}
+
+.navbar-link-container a:hover,
+.navbar-link-container a:active,
+.navbar-link-container a:focus {
+    color: #FC495D !important;
+}
+
+.navbar-toggler {
+    border-color: white;
+}
+
+
+/* html {
     margin: 0px -8px !important;
 }
 
 /*Navbar and front image styling*/
-.nav__toolbar {
+/* .nav__toolbar {
     display: flex;
 }
 
@@ -26,11 +56,11 @@ html {
 
 .css-1ps6pg7-MuiPaper-root {
     box-shadow: none !important;
-}
+} */
 
 
 /*Main page Form styling*/
-.form__wrapper {
+/* .form__wrapper {
     position: absolute;
     top: 700px;
     z-index: 50;
@@ -118,10 +148,10 @@ html {
 
 #formSuburb {
     color: #828282;
-}
+} */
 
 /*Main Text landing page styling*/
-.main__container {
+/* .main__container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -141,10 +171,10 @@ html {
     font-size: 15px;
     font-weight: normal;
     width: 625px;
-}
+} */
 
 /*Featured Property styling*/
-.featured__container {
+/* .featured__container {
     display: flex;
     width: 920px;
     margin: 0 auto;
@@ -194,10 +224,10 @@ html {
 
 .carousel__container .css-i4bv87-MuiSvgIcon-root {
     font-size: 75px !important;
-}
+} */
 
 /* Flip Animation for contact ads *requires you to click on the component*/
-.content__wrapper {
+/* .content__wrapper {
     display: flex;
     justify-content: center;
     margin-top: 100px;
@@ -247,3 +277,65 @@ html {
     padding: 35px;
     height: 163px;
 }
+
+/*Footer styling*/
+/* .footer__container {
+    background-color: #19263A;
+    height: 500px;
+}
+
+.footer__info {
+    padding: 80px;
+
+}
+
+.footer__images {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.footer__images img {
+    height: 50px;
+    margin-right: 30px;
+}
+
+.footer__links_top {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+
+.footer__links_top a {
+    color: white;
+}
+
+.footer__link_red {
+    color: #FC495D !important;
+}
+
+.footer__line {
+    color: #D8D8D8;
+}
+
+.footer__links_bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+
+.footer__links_bottom a {
+    color: white;
+}
+
+.footer__icons {
+    display: flex;
+}
+
+.footer__icons_paragraph {
+    margin-right: auto;
+} */
