--- a/MyPropCo/src/App.css
+++ b/MyPropCo/src/App.css
@@ -152,12 +152,197 @@
     }
 }
 
+.form-header {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+}
+
+.form-select-buy {
+    max-width: 90px;
+}
+
+.form-select-residential {
+    max-width: 330px;
+}
+
+.form-control-suburb {
+    max-width: 500px;
+}
+
+.form-control-number {
+    max-width: 235px;
+    background-color: transparent;
+}
+
+.form-control-number::placeholder {
+    color: white !important;
+}
+
+.form-select-more {
+    max-width: 209px;
+    background-color: transparent;
+    color: white !important;
+}
+
+.form-select-more option {
+    color: black !important;
+}
+
+.form-button {
+    max-width: 113px;
+}
+
+.form-paragraph {
+    width: 113px;
+    margin: 0;
+    color: white;
+}
+
+.form-footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form-footer-more {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    max-width: 940px;
+    margin: 0 auto;
+}
+
+.main-form-container {
+    background-color: rgb(25, 38, 58, 0.5);
+    padding: 20px;
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+.main-form {
+    position: absolute;
+    width: 100%;
+    top: 700px;
+}
+
+.footer__container {
+    background-color: #19263A;
+}
+
+.footer__info {
+    padding: 80px;
+
+}
+
+.footer__images {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.footer__images img {
+    height: 50px;
+    margin-right: 30px;
+}
+
+.footer__links_top {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.footer__links_top a {
+    color: white;
+}
+
+.footer__links_top p {
+    color: white;
+}
+
+
+.footer__links_top a:hover,
+.footer__links_bottom a:hover {
+    color: #FC495D !important;
+}
+
+.footer__line {
+    color: #D8D8D8;
+}
+
+.footer__links_bottom {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-wrap: wrap;
+    padding-top: 10px;
+}
+
+.footer__links_bottom p {
+    color: white;
+
+}
+
+.footer__links_bottom a {
+    color: white;
+}
+
+.footer__icons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+
+.footer__icons p {
+    color: white;
+    max-width: 225px;
+}
+
+.footer-icon-1,
+.footer-icon-2 {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
 /*----------------------------------------- MEDIA QUERIES---------------------------------------------*/
+@media screen and (max-width: 1675px) {
+    .main-form {
+        top: 620px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
+    .main-form {
+        top: 530px;
+    }
+}
+
 @media screen and (max-width: 1373px) {
 
     #featured-carousel .carousel-control-prev,
     #featured-carousel .carousel-control-next {
         width: 4% !important;
+    }
+}
+
+@media screen and (max-width: 1275px) {
+    .main-form {
+        top: 455px;
     }
 }
 
@@ -167,6 +352,35 @@
         flex-direction: column !important;
         max-width: 620px;
     }
+
+    .main-form {
+        top: 400px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .main-form {
+        top: 260px;
+    }
+
+    .main-form-container {
+        max-width: 470px;
+    }
+
+    .form-container {
+        flex-direction: column;
+    }
+
+    .form-header {
+        flex-direction: column;
+    }
+
+    .form-footer {
+        flex-direction: column;
+        gap: 10px;
+        align-items: flex-start;
+    }
+
 }
 
 @media screen and (max-width: 992px) {
@@ -183,8 +397,22 @@
         gap: 20px;
     }
 
+    .main-form {
+        top: 205px;
+    }
+
     .content-container {
         padding: 40px 15px;
+    }
+
+    .footer__info {
+        padding: 80px 40px;
+    }
+}
+
+@media screen and (max-width: 840px) {
+    .main-form {
+        top: 150px;
     }
 }
 
@@ -192,6 +420,12 @@
 
     .featured-card-container {
         padding: 0px 80px;
+    }
+}
+
+@media screen and (max-width: 740px) {
+    .main-form {
+        top: 120px;
     }
 }
 
@@ -211,11 +445,37 @@
     .featured-card-container {
         padding: 0px 50px;
     }
+
+    .main-form-container {
+        max-width: 370px;
+    }
+
+
+}
+
+@media screen and (max-width: 500px) {
+    .main-wrapper {
+        padding-top: 120px !important;
+    }
 }
 
 @media screen and (max-width: 425px) {
     .featured-card-container {
         padding: 0px 25px;
+    }
+
+    .main-form {
+        top: 90px;
+    }
+
+    .footer__icons {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .footer__info {
+        padding: 80px 20px;
     }
 }
 
@@ -229,6 +489,13 @@
         display: none !important;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .main-form {
+        top: 61px;
+    }
+}
+
 
 
 
@@ -465,64 +732,4 @@
     height: 163px;
 }
 
-/*Footer styling*/
-/* .footer__container {
-    background-color: #19263A;
-    height: 500px;
-}
-
-.footer__info {
-    padding: 80px;
-
-}
-
-.footer__images {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    margin-bottom: 40px;
-}
-
-.footer__images img {
-    height: 50px;
-    margin-right: 30px;
-}
-
-.footer__links_top {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-}
-
-.footer__links_top a {
-    color: white;
-}
-
-.footer__link_red {
-    color: #FC495D !important;
-}
-
-.footer__line {
-    color: #D8D8D8;
-}
-
-.footer__links_bottom {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-}
-
-.footer__links_bottom a {
-    color: white;
-}
-
-.footer__icons {
-    display: flex;
-}
-
-.footer__icons_paragraph {
-    margin-right: auto;
-} */
+/* Footer styling*/
